@@ -1,5 +1,7 @@
 2017-01-19  Charlie Zender  <zender@uci.edu>
 
+	* Extract variables in CF "cell_measures" attributes
+
 	* Add areacella to in.cdl in preparation for adding CF cell_measures variables to extraction list
 
 	* NCO 4.6.4-alpha05 release procedure:
@@ -23,7 +25,7 @@
 
 2017-01-17  Charlie Zender  <zender@uci.edu>
 
-	* Extract variables in CF "formula_terms" attribute
+	* Extract variables in CF "formula_terms" attributes
 
 	* Fix attributes in hdn.cdl
 
